--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,97 @@
-#container{
+body{
     display: flex;
+    flex-direction: column;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#container{
+    background-color: #1f2937;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    padding: 0 160px 160px 160px;
+}
+
+.header{
+    display: flex;
+    flex: 90%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+    padding-bottom: 100px;
 }
 
 .header-logo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-size: 32px;
+    font-weight: 700;
 }
 
-#logo{
-    width: 100px;
-    height: 90px;
+a{
+    text-decoration: none;
+    color: #f9faf8;
+}
+
+a:hover{
+    color: rgb(22, 22, 24);
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    gap: 8px;
+}
+
+.header-text{
+    display: flex;
+    flex: 10%;
+    justify-content: flex-start;
+    gap: 16px;
+}
+
+.header-text-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 450px;
+}
+
+.title{
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: bolder;
+}
+
+.title-text{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.headr-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-example{
+width: 475px;
+height: 250px;
+}
+
+.button{
+    display: flex;
+    padding: 5px;
+    justify-content: left;
+}
+
+.btn{
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 8px;
+    background-color: #3882f6;
+    border-radius: 10px;
 }
