--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
-body{
-    display: flex;
-    flex-direction: column;
+*{
+    padding: 0;
     margin: 0;
+    box-sizing: border-box;
+}
+body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -9,7 +11,7 @@ body{
     background-color: #1f2937;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0 160px 160px 160px;
 }
@@ -42,7 +44,7 @@ ul{
     display: flex;
     padding: 0;
     margin: 0;
-    gap: 8px;
+    gap: 14px;
 }
 
 .header-text{
@@ -71,7 +73,7 @@ ul{
     color: #E5E7EB;
 }
 
-.headr-img{
+.header-img{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -94,4 +96,98 @@ height: 250px;
     margin-top: 8px;
     background-color: #3882f6;
     border-radius: 10px;
+}
+
+.cards-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+    padding: 0 200px 100px 200px;
+}
+
+.cards-title{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    padding: 50px;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 180px;
+}
+
+.img-card{
+    border: 4px solid #3882f6;
+    width: 165px;
+    height: 175px;
+    border-radius: 10px;
+    margin-bottom: 16px;
+}
+
+.card-text{
+    color: rgb(48, 47, 47);
+    text-align: center;
+}
+
+#cita{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #e5e7eb;
+    color: black;
+    font-family: "light italic";
+    font-size: 36px;
+    padding: 100px 250px 100px 250px;
+}
+
+.autor-cita{
+    font-size: 24px;
+    padding-left: 500px;
+    font-weight: 900;
+}
+
+#alert{
+    background-color: #3882f6;
+    margin: 100px 150px 100px 150px;
+    padding: 30px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 100px;
+}
+
+.alert-title{
+    font-size: 22px;
+    color: #E5E7EB;
+    font-weight: bold;
+}
+
+.alert-text{
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.alert-button{
+    border: 2px solid #E5E7EB;
+    padding: 10px 30px;
+    border-radius: 10px;
+    color: #E5E7EB;
+}
+
+.footer{
+    background-color: #1f2937;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
 }
